# pumpkin

./: .gitignore  Capfile  Gemfile  Makefile  README.md
app/controllers/: application_controller.rb  bugs_controller.rb  environments_controller.rb  heartbeat_controller.rb  occurrences_controller.rb  patches_controller.rb  static_controller.rb
app/jobs/: assign_bug.rb  assign_bugs_job.rb  create_bug_issue.rb  create_issue.rb
app/models/: bug.rb  bug_summary.rb  environment.rb  event.rb  issue.rb  occurrence.rb  patch.rb
app/queries/: bug_search.rb
app/serializers/: bug_serializer.rb  bug_summary_serializer.rb  event_serializer.rb  full_bug_serializer.rb  occurrence_serializer.rb  patch_serializer.rb
config/: application.rb  database.yml  deploy.rb  routes.rb  secrets.yml
config/deploy/: staging.rb  test.rb
config/environments/: production.rb
config/initializers/: cors.rb  resque.rb
db/: schema.rb  structure.sql
db/migrate/: 20160914224317_create_occurrences.rb  20160914233248_create_patches.rb  20160914233416_add_patch_to_occurrences.rb  20160914235925_create_bugs.rb  20160915001629_add_bug_to_occurrences.rb  20160915022656_add_not_null_to_references.rb  20161019211306_create_events.rb  20161020213813_add_bug_with_latest_details_view.rb  20161021015303_add_issue_url_to_bugs.rb  20161021020642_add_issue_url_to_bug_with_latest_details_view.rb  20170419231713_rename_patches_to_environments.rb  20170512080542_use_name_as_environment_primary_key.rb  20170513025949_add_missing_foreign_keys.rb  20170517232210_change_default_value_for_occurrences_data_to_empty_hash.rb  20170518025001_create_issues.rb  20170518025712_drop_issue_url_from_bug.rb  20170518025712_drop_issue_url_from_bugs.rb  20170525052218_make_occurrences_message_mandatory.rb  20170627021757_tidy_up_bug_with_latest_details_view.rb  20170628024740_create_bug_summary.rb  20170705012310_add_index_on_occurred_at.rb  20170705021046_optimise_bug_summaries.rb  20170720033420_better_occurrence_indices.rb  20170817091200_add_tags_to_occurrences.rb  20170928043129_add_index_on_occurrences_for_environment_and_occured_at.rb
elm/: .dir-locals.el  elm-package.json
elm/src/: BugDetails.elm  BugList.elm  ChunkList.elm  FormatData.elm  Main.elm  Rest.elm  TimeAgo.elm  Types.elm  View.elm  ViewCommon.elm  ViewNew.elm
elm/src/BugDetails/: Rest.elm  State.elm  Types.elm  View.elm
haskell/: Dockerfile  Dockerfile-base  LICENSE  Makefile  README.md  TODO.org  docker-compose.yml  pumpkin-server.cabal  stack.yaml
haskell/app/: Main.hs
haskell/matcher/: Main.hs
haskell/src/: API.hs  Actions.hs  Auth.hs  Bug.hs  DB.hs  JSON.hs  Server.hs  Types.hs
public/: app.html  index.html
public/css/: stylesheet.css
public/js/: app.js
server/: README.md  TODO.org  pumpkin-server.cabal
server/app/: Main.hs
server/src/: API.hs  Actions.hs  Bug.hs  DB.hs  Environment.hs  JSON.hs  Lib.hs  Matcher.hs  Queries.hs  Server.hs  Types.hs
test/controllers/: bugs_controller_test.rb  environments_controller_test.rb  occurrences_controller_test.rb  patches_controller_test.rb
test/fixtures/: bugs.yml  environments.yml  events.yml  issues.yml  occurrences.yml  patches.yml
test/jobs/: assign_bug_test.rb  assign_bugs_job_test.rb
test/models/: bug_summary_test.rb  bug_test.rb  environment_test.rb  occurrence_test.rb
test/support/schemas/bugs/: index.json  show.json
test/support/schemas/occurrences/: _occurrence.json  create.json  index.json  show.json
